be adjustments